重构消息收发模块