@@ -15,7 +15,9 @@ import android.net.wifi.WifiManager;
 /**
  * Wifi 工具类
  * 
- * <p>封装了Wifi的基础操作方法，方便获取Wifi连接信息以及操作Wifi</p>
+ * <p>
+ * 封装了Wifi的基础操作方法，方便获取Wifi连接信息以及操作Wifi
+ * </p>
  */
 
 public class WifiUtils {
@@ -27,87 +29,84 @@ public class WifiUtils {
     WifiManager.WifiLock mWifiLock;
     public WifiManager mWifiManager;
 
-    public WifiUtils(Context paramContext) {
-        this.mWifiManager = ((WifiManager) paramContext
-                .getSystemService(Context.WIFI_SERVICE));
-        this.mWifiInfo = this.mWifiManager.getConnectionInfo();
-        this.mDhcpInfo = this.mWifiManager.getDhcpInfo();
+    private WifiUtils(Context paramContext) {
+        mWifiManager = (WifiManager) paramContext.getSystemService(Context.WIFI_SERVICE);        
+        mDhcpInfo = mWifiManager.getDhcpInfo();
+        mWifiInfo = mWifiManager.getConnectionInfo();
     }
 
     public static WifiUtils getInstance(Context paramContext) {
         if (wiFiAdmin == null)
             wiFiAdmin = new WifiUtils(paramContext);
         return wiFiAdmin;
-    }
+    }   
 
     private WifiConfiguration isExsits(String paramString) {
-        Iterator localIterator = this.mWifiManager.getConfiguredNetworks()
-                .iterator();
+        Iterator<WifiConfiguration> localIterator = mWifiManager.getConfiguredNetworks().iterator();
         WifiConfiguration localWifiConfiguration;
         do {
             if (!localIterator.hasNext())
                 return null;
             localWifiConfiguration = (WifiConfiguration) localIterator.next();
-        } while (!localWifiConfiguration.SSID.equals("\"" + paramString + "\""));
+        }
+        while (!localWifiConfiguration.SSID.equals("\"" + paramString + "\""));
         return localWifiConfiguration;
     }
 
     public void AcquireWifiLock() {
-        this.mWifiLock.acquire();
+        mWifiLock.acquire();
     }
 
     public void CreatWifiLock() {
-        this.mWifiLock = this.mWifiManager.createWifiLock("Test");
+        mWifiLock = mWifiManager.createWifiLock("Test");
     }
 
     public void OpenWifi() {
-        if (!this.mWifiManager.isWifiEnabled())
-            this.mWifiManager.setWifiEnabled(true);
+        if (!mWifiManager.isWifiEnabled())
+            mWifiManager.setWifiEnabled(true);
     }
 
     public void ReleaseWifiLock() {
-        if (this.mWifiLock.isHeld())
-            this.mWifiLock.release();
+        if (mWifiLock.isHeld())
+            mWifiLock.release();
     }
 
     public void addNetwork(WifiConfiguration paramWifiConfiguration) {
-        int i = this.mWifiManager.addNetwork(paramWifiConfiguration);
-        this.mWifiManager.enableNetwork(i, true);
+        int i = mWifiManager.addNetwork(paramWifiConfiguration);
+        mWifiManager.enableNetwork(i, true);
     }
 
     public void closeWifi() {
-        this.mWifiManager.setWifiEnabled(false);
+        mWifiManager.setWifiEnabled(false);
     }
 
     public void connectConfiguration(int paramInt) {
-        if (paramInt > this.mWifiConfiguration.size())
+        if (paramInt > mWifiConfiguration.size())
             return;
-        this.mWifiManager
-                .enableNetwork(((WifiConfiguration) this.mWifiConfiguration
-                        .get(paramInt)).networkId, true);
+        mWifiManager.enableNetwork(
+                ((WifiConfiguration) mWifiConfiguration.get(paramInt)).networkId, true);
     }
 
-    public void createWiFiAP(WifiConfiguration paramWifiConfiguration,
-            boolean paramBoolean) {
+    public void createWiFiAP(WifiConfiguration paramWifiConfiguration, boolean paramBoolean) {
         try {
-            Class localClass = this.mWifiManager.getClass();
+            Class<? extends WifiManager> localClass = mWifiManager.getClass();
             Class[] arrayOfClass = new Class[2];
             arrayOfClass[0] = WifiConfiguration.class;
             arrayOfClass[1] = Boolean.TYPE;
-            Method localMethod = localClass.getMethod("setWifiApEnabled",
-                    arrayOfClass);
-            WifiManager localWifiManager = this.mWifiManager;
+            Method localMethod = localClass.getMethod("setWifiApEnabled", arrayOfClass);
+            WifiManager localWifiManager = mWifiManager;
             Object[] arrayOfObject = new Object[2];
             arrayOfObject[0] = paramWifiConfiguration;
             arrayOfObject[1] = Boolean.valueOf(paramBoolean);
             localMethod.invoke(localWifiManager, arrayOfObject);
             return;
-        } catch (Exception localException) {
+        }
+        catch (Exception localException) {
         }
     }
 
-    public WifiConfiguration createWifiInfo(String ssid, String paramString2,
-            int paramInt, String paramString3) {
+    public WifiConfiguration createWifiInfo(String ssid, String paramString2, int paramInt,
+            String paramString3) {
         WifiConfiguration localWifiConfiguration1 = new WifiConfiguration();
         localWifiConfiguration1.allowedAuthAlgorithms.clear();
         localWifiConfiguration1.allowedGroupCiphers.clear();
@@ -123,10 +122,12 @@ public class WifiUtils {
                 localWifiConfiguration1.wepKeys[0] = "";
                 localWifiConfiguration1.allowedKeyManagement.set(0);
                 localWifiConfiguration1.wepTxKeyIndex = 0;
-            } else if (paramInt == 2) {
+            }
+            else if (paramInt == 2) {
                 localWifiConfiguration1.hiddenSSID = true;
                 localWifiConfiguration1.wepKeys[0] = ("\"" + paramString2 + "\"");
-            } else {
+            }
+            else {
                 localWifiConfiguration1.preSharedKey = ("\"" + paramString2 + "\"");
                 localWifiConfiguration1.hiddenSSID = true;
                 localWifiConfiguration1.allowedAuthAlgorithms.set(0);
@@ -136,27 +137,26 @@ public class WifiUtils {
                 localWifiConfiguration1.allowedGroupCiphers.set(3);
                 localWifiConfiguration1.allowedPairwiseCiphers.set(2);
             }
-        } else {
+        }
+        else {
             localWifiConfiguration1.SSID = ssid;
             localWifiConfiguration1.allowedAuthAlgorithms.set(1);
-            localWifiConfiguration1.allowedGroupCiphers
-                    .set(WifiConfiguration.GroupCipher.CCMP);
-            localWifiConfiguration1.allowedGroupCiphers
-                    .set(WifiConfiguration.GroupCipher.TKIP);
-            localWifiConfiguration1.allowedGroupCiphers
-                    .set(WifiConfiguration.GroupCipher.WEP40);
-            localWifiConfiguration1.allowedGroupCiphers
-                    .set(WifiConfiguration.GroupCipher.WEP104);
+            localWifiConfiguration1.allowedGroupCiphers.set(WifiConfiguration.GroupCipher.CCMP);
+            localWifiConfiguration1.allowedGroupCiphers.set(WifiConfiguration.GroupCipher.TKIP);
+            localWifiConfiguration1.allowedGroupCiphers.set(WifiConfiguration.GroupCipher.WEP40);
+            localWifiConfiguration1.allowedGroupCiphers.set(WifiConfiguration.GroupCipher.WEP104);
             localWifiConfiguration1.allowedKeyManagement.set(0);
             localWifiConfiguration1.wepTxKeyIndex = 0;
             if (paramInt == 1) {
                 localWifiConfiguration1.wepKeys[0] = "";
                 localWifiConfiguration1.allowedKeyManagement.set(0);
                 localWifiConfiguration1.wepTxKeyIndex = 0;
-            } else if (paramInt == 2) {
+            }
+            else if (paramInt == 2) {
                 localWifiConfiguration1.hiddenSSID = true;
                 localWifiConfiguration1.wepKeys[0] = paramString2;
-            } else if (paramInt == 3) {
+            }
+            else if (paramInt == 3) {
                 localWifiConfiguration1.preSharedKey = paramString2;
                 localWifiConfiguration1.allowedAuthAlgorithms.set(0);
                 localWifiConfiguration1.allowedProtocols.set(1);
@@ -170,24 +170,22 @@ public class WifiUtils {
     }
 
     public void disconnectWifi(int paramInt) {
-        this.mWifiManager.disableNetwork(paramInt);
+        mWifiManager.disableNetwork(paramInt);
     }
 
     public String getApSSID() {
         try {
-            Method localMethod = this.mWifiManager.getClass()
-                    .getDeclaredMethod("getWifiApConfiguration", new Class[0]);
+            Method localMethod = mWifiManager.getClass().getDeclaredMethod(
+                    "getWifiApConfiguration", new Class[0]);
             if (localMethod == null)
                 return null;
-            Object localObject1 = localMethod.invoke(this.mWifiManager,
-                    new Object[0]);
+            Object localObject1 = localMethod.invoke(mWifiManager, new Object[0]);
             if (localObject1 == null)
                 return null;
             WifiConfiguration localWifiConfiguration = (WifiConfiguration) localObject1;
             if (localWifiConfiguration.SSID != null)
                 return localWifiConfiguration.SSID;
-            Field localField1 = WifiConfiguration.class
-                    .getDeclaredField("mWifiApProfile");
+            Field localField1 = WifiConfiguration.class.getDeclaredField("mWifiApProfile");
             if (localField1 == null)
                 return null;
             localField1.setAccessible(true);
@@ -195,8 +193,7 @@ public class WifiUtils {
             localField1.setAccessible(false);
             if (localObject2 == null)
                 return null;
-            Field localField2 = localObject2.getClass()
-                    .getDeclaredField("SSID");
+            Field localField2 = localObject2.getClass().getDeclaredField("SSID");
             localField2.setAccessible(true);
             Object localObject3 = localField2.get(localObject2);
             if (localObject3 == null)
@@ -204,62 +201,64 @@ public class WifiUtils {
             localField2.setAccessible(false);
             String str = (String) localObject3;
             return str;
-        } catch (Exception localException) {
+        }
+        catch (Exception localException) {
         }
         return null;
     }
 
     public String getBSSID() {
-        if (this.mWifiInfo == null)
+        if (mWifiInfo == null)
             return "NULL";
-        return this.mWifiInfo.getBSSID();
+        return mWifiInfo.getBSSID();
     }
 
     public List<WifiConfiguration> getConfiguration() {
-        return this.mWifiConfiguration;
+        return mWifiConfiguration;
     }
 
     public String getLocalIPAddress() {
-        if (this.mDhcpInfo == null)
+        if (mDhcpInfo == null)
             return "NULL";
-        return intToIp(this.mDhcpInfo.ipAddress);
-    }  
-    
+        return intToIp(mDhcpInfo.ipAddress);
+    }
+
     public String getServerIPAddress() {
-        if (this.mDhcpInfo == null)
+        if (mDhcpInfo == null)
             return "NULL";
-        return intToIp(this.mDhcpInfo.serverAddress);
+        return intToIp(mDhcpInfo.serverAddress);
     }
 
     public String getMacAddress() {
-        if (this.mWifiInfo == null)
+        if (mWifiInfo == null)
             return "NULL";
-        return this.mWifiInfo.getMacAddress();
-    }    
+        return mWifiInfo.getMacAddress();
+    }
 
     public int getNetworkId() {
-        if (this.mWifiInfo == null)
+        if (mWifiInfo == null)
             return 0;
-        return this.mWifiInfo.getNetworkId();
+        return mWifiInfo.getNetworkId();
     }
 
     public int getWifiApState() {
         try {
-            int i = ((Integer) this.mWifiManager.getClass()
+            int i = ((Integer) mWifiManager.getClass()
                     .getMethod("getWifiApState", new Class[0])
-                    .invoke(this.mWifiManager, new Object[0])).intValue();
+                    .invoke(mWifiManager, new Object[0])).intValue();
             return i;
-        } catch (Exception localException) {
+        }
+        catch (Exception localException) {
         }
         return 4;
     }
 
     public WifiInfo getWifiInfo() {
-        return this.mWifiManager.getConnectionInfo();
+        return mWifiManager.getConnectionInfo();
     }
 
     public List<ScanResult> getWifiList() {
-        return this.mWifiList;
+        return mWifiList;
     }
 
     public StringBuilder lookUpScan() {
@@ -267,20 +266,18 @@ public class WifiUtils {
         for (int i = 0;; i++) {
             if (i >= 2)
                 return localStringBuilder;
-            localStringBuilder.append("Index_" + new Integer(i + 1).toString()
-                    + ":");
-            localStringBuilder.append(((ScanResult) this.mWifiList.get(i))
-                    .toString());
+            localStringBuilder.append("Index_" + Integer.valueOf(i + 1).toString() + ":");
+            localStringBuilder.append(((ScanResult) mWifiList.get(i)).toString());
             localStringBuilder.append("/n");
         }
     }
 
     public void setWifiList() {
-        this.mWifiList = this.mWifiManager.getScanResults();
+        mWifiList = mWifiManager.getScanResults();
     }
 
     public void startScan() {
-        this.mWifiManager.startScan();
+        mWifiManager.startScan();
     }
 
     public String intToIp(int paramIntip) {
